Página web mejorada

--- a/index.html
+++ b/index.html
@@ -4,39 +4,29 @@
 
 <head>
 <title>Mi portada</title>
-<style>
-body{
-background-color:#58D68D
-}
-body header h1{
-text-align:center;
-}
-header nav a {
-text-decoration:none;
-background-color:#27AE60
-}
-header nav ul{
-display:flex;
-justify-content:space-around;
-list-style:none;
-padding:0;
-margin:0;
-}
-</style>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lovers+Quarrel&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="estilo.css"/>
 </head>
 <body>
 <header>
-<h1>MI WEB PROFESIONAL</h1>
+<h1>Bienvenido a mi web amorosa</h1>
 <nav>
-<ul>
-<li><a href="aficiones.html">Mis aficiones y hobbies</a></li>
-<li><a href="cv.html">Mi curriculum</a></li>
-<li><a href="about_me.html">Sobre mi</a></li>
-<li><a href="login.html">Login</a></li>
-<li><a href="contact.html">Contacto</a></li>
-<li><a href="minigame.html">Minijuego</a></li>
+<ul class="portada">
+<li class="portada"><a href="aficiones.html">Mis aficiones y hobbies</a></li>
+<li class="portada"><a href="about_me.html">Sobre mi</a></li>
+<li class="portada"><a href="login.html">Login</a></li>
+<li class="portada"><a href="contact.html">Contacto</a></li>
+<li class="portada"><a href="minigame.html">Minijuego</a></li>
 </ul>
 </nav>
 </header>
+<main>
+<p class="portada"><img src="corazon.jpg" title="amor" alt="cora"></p>
+</main>
 </body>
 </html>
