Foto añadida en index.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </header>
 <main>
 <p class="portada"><img src="corazon.jpg" title="amor" alt="cora"></p>
+<p class="portada"><img src="porque.jpg" title="porque" alt="porque"></p>
 </main>
 </body>
 </html>
