--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
 <h1>Mi contacto (se acepta todo menos denuncias)</h1>
 <nav>
 <ul>
-<li><a href="index.html">Aficiones y hobbies</a></li>
-<li><a href="aficiones.html">Portada</a></li>
+<li><a href="index.html">Portada</a></li>
+<li><a href="aficiones.html">Aficiones y hobbies</a></li>
 <li><a href="about_me.html">Sobre mi</a></li>
 <li><a href="login.html">Login</a></li>
 <li><a href="minigame.html">Minijuego</a></li>
