--- a/minigame.html
+++ b/minigame.html
@@ -17,7 +17,7 @@
 <nav>
 <ul>
 <li><a href="index.html">Portada</a></li>
-<li><a href="aficiones.html">Aficiones</a></li>
+<li><a href="aficiones.html">Aficiones y hobbies</a></li>
 <li><a href="about_me.html">Sobre mi</a></li>
 <li><a href="login.html">Login</a></li>
 <li><a href="contact.html">Contacto</a></li>
